--- a/popup/popup.html
+++ b/popup/popup.html
@@ -26,8 +26,9 @@
         <input type="checkbox" id="skipDrafts" name="skipDrafts" />
         <label for="skipDrafts">Skip drafts</label>
     </div>
-    <div>
-        <button id="save">save</button>
+    <div class="input-container">
+        <label for="requiredApprovals">Required approvals</label>
+        <input type="number" id="requiredApprovals" name="requiredApprovals" />
     </div>
     <div>
         <button id="button-reload">Reload</button>
