--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="popup.css">
-    <title>Gitlab speculum</title>
+    <title>Git buster</title>
 </head>
 <body>
 <h1 class="h1 title">
-    Gitlab speculum
+    Git buster
 </h1>
 <div class="row">
     <div>
