--- a/settings/settings.html
+++ b/settings/settings.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="settings.css">
-    <title>Gitlab speculum</title>
+    <title>Git buster</title>
 </head>
 <body>
     This is the <span class="special-text">settings</span> page for the addon.
