--- a/popup/popup.html
+++ b/popup/popup.html
@@ -34,6 +34,9 @@
         <button id="button-reload">Reload</button>
     </div>
     <div>
+        <button id="Save">Save</button>
+    </div>
+    <div>
         <div id="notif"></div>
     </div>
 </div>
