--- a/popup/popup.html
+++ b/popup/popup.html
@@ -31,7 +31,7 @@
         <input type="number" id="requiredApprovals" name="requiredApprovals" />
     </div>
     <div>
-        <button id="button-reload">Reload</button>
+        <button id="button-reload">Reload extension</button>
     </div>
     <div>
         <div id="notif"></div>
