--- a/popup/popup.html
+++ b/popup/popup.html
@@ -30,6 +30,10 @@
         <label for="requiredApprovals">Required approvals</label>
         <input type="number" id="requiredApprovals" name="requiredApprovals" />
     </div>
+    <div class="input-container">
+        <label for="facultativeApprovers">Facultative approvers (separate with a coma)</label>
+        <input type="text" id="facultativeApprovers" name="facultativeApprovers" />
+    </div>
     <div>
         <button id="button-reload">Reload extension</button>
     </div>
