--- a/popup/popup.html
+++ b/popup/popup.html
@@ -26,6 +26,10 @@
         <label for="projects">Projects</label>
         <textarea id="projects" name="projects" rows="5"></textarea>
     </div>
+    <div class="input-container column">
+        <label for="teamRequirements">teamRequirements</label>
+        <textarea id="teamRequirements" name="teamRequirements" rows="5"></textarea>
+    </div>
     <div>
         <button id="button-reload">Reload extension</button>
     </div>
