--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,40 +4,29 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="popup.css">
     <title>Git buster</title>
+    <style>
+      body { font-family: system-ui,sans-serif; padding:12px; min-width:260px; }
+      a { color:#1f78d1; }
+    </style>
 </head>
 <body>
-<h1 class="h1 title">
-    Git buster
-</h1>
-<div class="row">
-    <div class="input-container">
-        <label for="enable">Enable</label>
-        <input type="checkbox" id="enable" name="enable" />
-    </div>
-    <div class="input-container">
-        <label for="baseUrl">BaseUrl</label>
-        <input type="text" id="baseUrl" name="baseUrl" />
-    </div>
-    <div class="input-container">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" />
-    </div>
-    <div class="input-container column">
-        <label for="projects">Projects</label>
-        <textarea id="projects" name="projects" rows="5"></textarea>
-    </div>
-    <div class="input-container column">
-        <label for="teamRequirements">teamRequirements</label>
-        <textarea id="teamRequirements" name="teamRequirements" rows="5"></textarea>
-    </div>
-    <div>
-        <button id="button-reload">Reload extension</button>
-    </div>
-    <div>
-        <div id="notif"></div>
-    </div>
-</div>
-
+  <h1 style="margin:0 0 12px">Git buster</h1>
+  <p>Configuration moved to the <strong>Settings</strong> page.</p>
+  <p style="margin:8px 0; font-size:13px;">Open extension settings to edit options.</p>
+  <button id="open-settings" type="button" style="cursor:pointer;padding:6px 12px;border-radius:6px;background:#1f78d1;color:#fff;border:1px solid #0d4e8a;">Open Settings</button>
+  <div>
+      <button id="button-reload">Reload extension</button>
+  </div>
+  <script>
+    document.getElementById('open-settings')?.addEventListener('click', () => {
+      try {
+        if (chrome?.runtime?.openOptionsPage) { chrome.runtime.openOptionsPage(); return; }
+        if (browser?.runtime?.openOptionsPage) { browser.runtime.openOptionsPage(); return; }
+      } catch {}
+      // Fallback: attempt to open settings page path
+      const url = chrome?.runtime?.getURL('settings/settings.html') || browser?.runtime?.getURL('settings/settings.html');
+      if (url) window.open(url, '_blank');
+    });
+  </script>
 </body>
-<script src="popup.js" type="text/javascript"></script>
 </html>
